--- a/src/app/productos/productos-index/productos-index.component.html
+++ b/src/app/productos/productos-index/productos-index.component.html
@@ -10,10 +10,7 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center">
             <h5 class="card-title">Listado de Productos</h5>
-            <button
-              class="btn btn-primary"
-              routerLink="/inventario/estaciones/create"
-            >
+            <button class="btn btn-primary" routerLink="/productos/create">
               Añadir Producto
             </button>
           </div>
