feature: producto detail

--- a/src/app/productos/productos-create/productos-create.component.html
+++ b/src/app/productos/productos-create/productos-create.component.html
@@ -2,9 +2,7 @@
   <nav class="page-breadcrumb mb-3">
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a routerLink="/productos" class="text-decoration-none"
-          >Productos</a
-        >
+        <a routerLink="/productos" class="text-decoration-none">Productos</a>
       </li>
       <li class="breadcrumb-item active" aria-current="page">Crear</li>
     </ol>
