--- a/src/app/productos/productos-index/productos-index.component.html
+++ b/src/app/productos/productos-index/productos-index.component.html
@@ -35,13 +35,13 @@
                   <td class="d-flex justify-content-around">
                     <button
                       class="btn btn-success"
-                      routerLink="/inventario/estaciones/{{ producto.id }}"
+                      routerLink="/productos/{{ producto.id }}"
                     >
                       <i-feather name="eye"></i-feather>
                     </button>
                     <button
                       class="btn btn-warning"
-                      routerLink="/inventario/estaciones/{{ producto.id }}/edit"
+                      routerLink="/productos/{{ producto.id }}/edit"
                     >
                       <i-feather name="edit"></i-feather>
                     </button>
