feature: destroy productos

--- a/src/app/productos/productos-index/productos-index.component.html
+++ b/src/app/productos/productos-index/productos-index.component.html
@@ -45,7 +45,10 @@
                     >
                       <i-feather name="edit"></i-feather>
                     </button>
-                    <button class="btn btn-danger">
+                    <button
+                      class="btn btn-danger"
+                      (click)="borrarProducto(producto)"
+                    >
                       <i-feather name="trash-2"></i-feather>
                     </button>
                   </td>
