fix: nombre servicio producto

--- a/src/app/productos/productos-index/productos-index.component.html
+++ b/src/app/productos/productos-index/productos-index.component.html
@@ -41,7 +41,7 @@
                     </button>
                     <button
                       class="btn btn-warning"
-                      routerLink="/productos/{{ producto.id }}/edit"
+                      routerLink="/productos/{{ producto.id }}/update"
                     >
                       <i-feather name="edit"></i-feather>
                     </button>
