fix: typo editar

--- a/src/app/productos/productos-update/productos-update.component.html
+++ b/src/app/productos/productos-update/productos-update.component.html
@@ -11,7 +11,7 @@
     <div class="card shadow-sm">
       <div class="card-body">
         <div class="container">
-          <h2 class="my-4">Crear Producto</h2>
+          <h2 class="my-4">Editar Producto</h2>
           <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
             <div class="row g-4">
               <div class="col-md-6">
