feature: agregar al carrito y confirmar compra

--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -27,6 +27,8 @@
 
   <div class="d-flex justify-content-between align-items-center mt-5">
     <h3>Total: ${{ carrito.total }}</h3>
-    <button class="btn btn-primary">Confirmar Compra</button>
+    <button class="btn btn-primary" (click)="confirmarCompra()">
+      Confirmar Compra
+    </button>
   </div>
 </div>
